<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="170dp"
        tools:layout_editor_absoluteY="60dp">

        <ListView
            android:id="@+id/currentPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="vertical">

        </ListView>

        <TextView
            android:id="@+id/hello2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello" />

        <EditText
            android:id="@+id/body2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal" />

        <Button
            android:id="@+id/updateText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text" />

        <Button
            android:id="@+id/angerButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/anger" />

        <Button
            android:id="@+id/fearButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fear" />

        <Button
            android:id="@+id/sadnessButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sadness" />

        <Button
            android:id="@+id/loveButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/love" />

        <Button
            android:id="@+id/joyButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/joy" />

        <Button
            android:id="@+id/surpriseButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surprise" />

        <Button
            android:id="@+id/updateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time" />

        <Button
            android:id="@+id/done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>