<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/oldTweetsTitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="My old tweets" />

    <ListView
        android:id="@+id/oldPostsList"
        android:layout_width="fill_parent"
        android:layout_height="263dp"
        android:layout_weight="1"
        android:scrollbars="vertical">

    </ListView>

    <Button
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit" />

    <Button
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <Button
        android:id="@+id/backButtonId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>